test_programs/compile_failure/main_with_generics/src/main.nr
fn main<let F: u32>(x: [Field; F]) {
    assert(x[0] != x[1]);
}
